--- a/instagram-clone/index.html
+++ b/instagram-clone/index.html
@@ -158,6 +158,9 @@
       measurementId: "G-CX0DFQ1PQP"
     };
 
+    console.log("Firebase initialized:", app);
+
+    
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
     const analytics = getAnalytics(app);
